# Encryption-Algorithm-RGR

./: .gitignore  .~lock.Без имени 1.odt#  CMakeLists.txt  CryptoLoader_chiffre.cpp  CryptoLoader_chiffre.h  FileCrypto_chiffre.cpp  FileCrypto_chiffre.h  GrandChiffreAlgorithm.cpp  GrandChiffreAlgorithm.h  ICryptoAlgorithm.h  ICryptoAlgorithm_chiffre.h  KeyValidator.h  KeyValidator_chiffre.cpp  KeyValidator_chiffre.h  README.md  TextCripto_chiffre.cpp  TextCrypto_chiffre.h  Vineger_Scytale_main.cpp  auth.cpp  auth.h  cipher_loader.cpp  cipher_loader.h  cipher_plugin.h  cipher_program  cryptoInterface.h  cryptoLibraryLoader.h  cryptoLibraryLoader_gronsfeld.cpp  cryptoLibraryLoader_gronsfeld.h  enigma_key.cpp  enigma_key.h  enigma_plugin.cpp  file_rsa_enigma.cpp  file_rsa_enigma.h  file_xor_tea.cpp  file_xor_tea.h  gronsfeld_cipher.cpp  key_manager.cpp  logic_rsa_enigma.cpp  logic_xor_tea.cpp  logic_xor_tea.h  (+26 more)
cripto/: CryptoLoader_chiffre.cpp  menu.cpp  plugin_loader_rsa_enigma.cpp
crypto/: FileCrypto_chiffre.cpp  GrandChiffreAlgorithm.cpp  KeyValidator_chiffre.cpp  Vineger_Scytale_main.cpp  cipher_loader.cpp  enigma_plugin.cpp  gronsfeld_cipher.cpp  key_manager.cpp  logic_rsa_enigma.cpp  logic_xor_tea.cpp  utf8Utils_gronsfeld.cpp  vigener_impl.cpp  vigener_plugin.cpp  xor_key.cpp
include/: FileCrypto_chiffre.h  GrandChiffreAlgorithm.h  ICryptoAlgorithm_chiffre.h  TextCrypto_chiffre.h  cipher_plugin.h  cryptoInterface_gronsfeld.h  key_manager.h  logic_rsa_enigma.h  plugin_loader_rsa_enigma.h  skitala_impl.h  utf8Utils_gronsfeld.h  utils.h  vigener_impl.h
(+5 files in other folders)
